# opex-agent

./: .gitignore  README.md  agent.ipynb  agent.py  composio_helper.py  context.py  debug_stream.py  env.example  main.py  nodes.py  pyproject.toml  server.py  supabase_client.py  test_supabase.py  ws_manager.py
.ipynb_checkpoints/: agent-checkpoint.py  composio_helper-checkpoint.py  main-checkpoint.py
