[project]
name = "opex-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "composio>=0.9.1",
    "composio-langchain>=0.9.1",
    "langchain-core>=1.0.4",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "logging>=0.4.9.6",
    "openai>=2.7.1",
]
