[project]
name = "opex-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "composio>=0.9.1",
    "composio-langchain>=0.9.1",
    "langchain-core>=1.0.4",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "logging>=0.4.9.6",
    "openai>=2.7.1",
    "langchain-google-genai>=2.0.0",
    "dotenv>=0.9.9",
    "langgraph-checkpoint-postgres>=3.0.1",
    "psycopg>=3.2.12",
    "sqlalchemy>=2.0.44",
]
